# AICV-Mobile

./: README.md  技术文档.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov8n-oiv7.txt  yolov8n.txt  yolov8n_oiv7.param
app/src/main/java/com/gyq/yolov8/: ClassAdapter.java  MainActivity.java  SettingsActivity.java  StyleParameters.java  Yolov8Ncnn.java
app/src/main/java/ylov/colorpicker/: ColorPickerDialog.java
app/src/main/jni/: CMakeLists.txt  EnhancedTracker.h  OCsort.h  Object.h  TrackingParams.h  ndkcamera.cpp  yolo.cpp  yolo.h  yolov8ncnn.cpp
app/src/main/res/color/: chip_background.xml  chip_text.xml  switch_thumb_selector.xml  switch_track_selector.xml  tech_chip_background_selector.xml  tech_chip_text_selector.xml
app/src/main/res/drawable/: dropdown_background.xml  edit_text_background.xml  ic_category.xml  ic_clear_all.xml  ic_filter_list.xml  ic_info_outline.xml  ic_select_all.xml  ic_settings.xml  ic_switch_camera.xml  ic_vertical_line.xml  ripple_effect.xml  style_indicator_dot.xml  tech_counter_background.xml  tech_glow_indicator.xml  tech_gradient_background.xml  tech_header_background.xml  tech_section_header_bg.xml
app/src/main/res/layout/: activity_settings.xml  class_selection_dialog.xml  dialog_app_help.xml  dialog_specific_class_selection.xml  dialog_style_info.xml  dropdown_item.xml  item_class_checkbox.xml  item_style_info.xml  main.xml  style_parameters_dialog.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
